web_interface/web-interface-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-interface-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-interface
  template:
    metadata:
      labels:
        app: web-interface
    spec:
      containers:
        - name: web-interface-container
          image: web-interface:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
