web_interface/web-interface-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-interface-service
spec:
  selector:
    app: web-interface
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
